Add gif image to layout

--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,31 @@ body {
 
 .main {
     display: grid;
-    grid-template: 100vh / 35vw 65vw;
+    grid-template: 100vh / 40vw 60vw;
     justify-content: center;
     align-content: center;
 }
 
 .main > div {
     border: 1px solid black;
+}
+
+img {
+    width: 100%;
+    height: 100vh;
+}
+
+.image {
+    display: flex;
+    position: relative;
+}
+
+.odin-tag {
+    background-color: black;
+    opacity: 60%;
+    width: 100%;
+    height: 20vh;
+
+    position: absolute;
+    top: 40%;
 }
