--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
-body {
+* {
+    box-sizing: border-box;
+}
+
+body, html {
     margin: 0;
+    padding: 0;
 }
 
 .main {
@@ -31,4 +36,31 @@ img {
 
     position: absolute;
     top: 40%;
+}
+
+.photocred {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: black;
+    opacity: 75%;
+    width: 100%;
+    height: 1.5rem;
+
+    position: absolute;
+    bottom: 0;
+
+    color: white;
+    text-align: center;
+    line-height: -15px;
+    font-size: small;
+}
+
+.photocred > a:visited,
+.photocred > a:focus,
+.photocred > a:active,
+.photocred > a:hover {
+    text-decoration: none;
+    color: white;
 }
