--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ form {
 
 .info {
     display: grid;
-    grid-template: 1fr 2fr / 1fr;
+    grid-template: 2.5fr 1.5fr 1fr / 1fr;
     justify-items: center;
     background-color: black;
 }
@@ -104,6 +104,19 @@ form {
     color: white;
 }
 
+.header {
+    background-color: rgb(123,104,238, 0.25);
+
+    width: 100%;
+    height: 110%;
+    
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    
+    box-shadow: 0px 0px 10px 0px #d8d8d8;
+}
+
 form {
     display: grid;
     grid-template: 80px 80px 80px/ 250px 300px;
@@ -113,6 +126,7 @@ form {
 
 label {
     font-size: 14px;
+    text-shadow: 2px 2px 2px black;
 }
 
 .fname {
@@ -148,7 +162,7 @@ label {
 .login {
     grid-row: 5 / 6;
     grid-column: 1 / 2;
-    font-size: 14px;
+    font-size: 12px;
     padding-left: 20px;
     padding-top: 20px;
     color:white;
@@ -191,17 +205,6 @@ button:active {
     transform: translateY(0px);
 }
 
-.header {
-    background-color: rgb(123,104,238);
-    width: 60%;
-    height: 55%;
-    top: 25%;
-    right: 0%;
-
-    position: fixed;
-    opacity: 20%;
-}
-
 .dothis {
     padding-top: 20px;
     color: white;
@@ -213,4 +216,10 @@ span {
 
 a:hover {
     color: var(--color-theme);
+}
+
+a[href="#"] {
+    color: white;
+    font-weight: bolder;
+    font-size: 15px;
 }
