--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,7 @@ span {
     font-size: 20px;
 }
 
-a[href="#"] {
+a[href="."] {
     color: white;
     font-weight: bolder;
     font-size: 15px;
