--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 @font-face {
     font-family: norse-font;
-    src: url(/Norse-Bold.otf)
+    src: url(./Norse-Bold.otf)
 }
 
 body, html {
@@ -315,7 +315,7 @@ label[for="phone"]::after {
     }
 
     .info {
-        background: url("/images/Free-download-Lofi-Background-HD.jpg");
+        background: url("./images/Free-download-Lofi-Background-HD.jpg");
         position: relative;
     }
 
