--- a/styles.css
+++ b/styles.css
@@ -375,7 +375,7 @@ label[for="phone"]::after {
     }
 
     .info {
-        background: url("/images/Free-download-Lofi-Background-HD.jpg");
+        background: url("./images/Free-download-Lofi-Background-HD.jpg");
         position: relative;
     }
 
